<resources>
    <string name="app_name">NDA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 키 -->
    <string name="setting_preference_switchKey">isAllowSync</string>
    <string name="setting_preference_showListPreferenceKey">showList</string>
    <string name="setting_preference_email">Email</string>
    <string name="setting_preference_version">Version</string>
    <string name="setting_preference_autoEnter">autoEnter</string>
    <string name="setting_preference_editInfo">editInfo</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <string name="developer_email">sghoregoodeveloper@gmail.com</string>
</resources>