<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="알림 설정">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/setting_preference_switchKey"
            app:summary="새로운 DRAW가 생길 시 알림으로 알려줍니다."
            app:title="DRAW 정보 받기" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:title="응모">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/setting_preference_autoEnter"
            app:summary="자동응모 기능을 사용합니다."
            app:title="자동응모 허용" />

        <Preference
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="@string/setting_preference_editInfo"
            app:summary="아이디 및 비밀번호를 수정합니다."
            app:title="정보 수정" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="기타">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/setting_preference_email"
            app:title="문의하기" />

        <Preference
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="@string/setting_preference_version"
            app:title="버전" />
    </PreferenceCategory>
</PreferenceScreen>